<resources>
    <string name="app_name">WalkToShop</string>
    <string name="action_settings">Impostazioni</string>
    <string name="action_exit">Esci</string>
    <string name="search">search</string>
    <string name="content_description_search">contenuto</string>
    <string name="action_home">home</string>
    <string name="action_map">mappa</string>
    <string name="action_statistics">statistiche</string>
    <string name="action_discount">miei sconti</string>
    <string name="action_notification">notifiche</string>
    <string name="action_search">cerca</string>
    <string name="snackbar_message">Caricamento schermata di inserimento sconto</string>
    <string name="snackbar_action">CLOSE</string>
    <string name="user">Utente</string>
    <string name="seller">Venditore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confPassword">Conferma Password</string>
    <string name="register">Registrati</string>
    <string name="emailOrPassWrong">EMAIL O PASSWORD ERRATI</string>
    <string name="emailEmpty">Inserire email</string>
    <string name="passwordEmpty">Inserire password</string>
    <string name="WrongPasswordFormat">La password deve essere lunga almeno 8 caratteri e inserire almeno: una lettera minuscola,una maiuscola, un carattere speciale[@,#,$,%,&amp;,?,!,_] e un numero</string>
    <string name="usernameEmpty">Inserire username</string>
    <string name="heightEmpty">Inserire altezza</string>
    <string name="weightEmpty">Inserire peso</string>
    <string name="wrongHeight">inserire una altezza compresa tra 100cm e 278cm</string>
    <string name="wrongWeight">inserire un peso che sia compreso tra 40kg e 250kg</string>
    <string name="numStepsEmpty">Inserire numero passi</string>
    <string name="InvalidPassword">Password non valida</string>
    <string name="EqualPassword">La password non corrisponde</string>
    <string name="InvalidEmail">Email non valida</string>
    <string name="InvalidUsername">Password non valida</string>
    <string name="emailExists">Email già esistente</string>
    <string name="usernameExists">Username già esistente</string>
    <string name="weight">Peso(Kg)</string>
    <string name="height">Altezza(cm)</string>
    <string name="InvalidWeight">formato peso errato</string>
    <string name="InvalidHeight">formato altezza errato</string>
    <string name="title_activity_seller_maps_view">Map</string>
    <string name="numStepsNotValid">Numero passi non valido</string>
    <string name="notRegistered">Non sei registrato? Clicca qui!</string>
    <string name="alreadyRegistered">Sei già registrato? Clicca qui!</string>
    <string name="RegistrationSuccess">Registrazione effettuata con succeso!</string>
    <string name="InvalidDescription">Descrizione non valida</string>
    <string name="InvalidDateFormat">Formato data errato</string>
    <string name="InvalidDate">Data errata</string>
    <string name="EmptyDate">Inserire data di scadenza</string>
    <string name="NotADay">Giorno non esistente</string>
    <string name="NotAMonth">Mese non esistente</string>
    <string name="NotAYearFree">Anno errato</string>
    //framgent_manageDiscount
    <string name="disocuntsQuantity">Passi da compiere per lo sconto</string>
    <string name="percentage">Percentuale</string>
    <string name="description">Descrizione</string>
    <string name="expiringDate">Data di scadenza</string>
    <string name="add">Aggiungi</string>
    //dialog
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="businessNotFound">Ci dispiace!Località non trovata.Riprovare, inserendo il nome con il seguente formato "Nome attività, Città attività" </string>
    <string name="emptyBusiness">Non possiedi attività! Per registrarne una clicca il bottone in basso a destra!</string>
    <string name="DialogFirstTime">Hai appena attivato il contapassi, questo vale per tutti i tuoi sconti nella Home. Per avere una accurata rilevazione deponi il dispositivo in tasca, fai le tue camminate e alla fine ricordati di disattivarlo per vedere i tuoi risultati!!</string>
    <string name="action_stepcounter">Pedometro</string>
    <string name="addBusinessDialog">Cliccare sul marker in rosso, per confermare l\'inserimento dell\'attività</string>
    //networkcontroller
    <string name="connect">Connettiti</string>
    <string name="Undo">Annulla</string>
    <string name="internetFail">Connessione internet troppo debole o assente.</string>
    //manageDiscount
    <string name="correctInfo">Inserimento sconto avvenuto con successo!</string>
    <string name="expiringDialog">Data di scadenza(gg/mm/aaaa)</string>
    <string name="notSupportedVersion">Inserire la data manualmente, poichè la versione del tuo dispositivo non supporta l inserimento automatico tramite calendario</string>
    <string name="dateFormat">Rispettare formato: gg/mm/aaaa</string>
    <string name="stepRange">Inserire un numero passi che sia compreso tra 2000 e 100000</string>
    <string name="invalidDate">Data non valida</string>
    //SellerView
    <string name="noActivity">Nessuna attività registrata</string>
    <string name="discount"> Sconti </string>
    <string name="noDiscount">Nessuno sconto disponibile</string>
    //CardView
    <string name="share">Ecco il codice sconto che ti è stato regalato:</string>
    <string name="hereDiscount">"Ecco il tuo codice sconto:"</string>
    //UserMapView
    <string name="allert_discount_creation">Un nuovo sconto è stato aggiunto!</string>
    <string name="allert_click_on_marker">Clicca sui contrassegni rossi nella mappa per scoprirne altri.</string>
    //UserView
    <string name="loading">Rilevamento della posizione in corso</string>
    <string name="noDiscountActive">Nessuno sconto attivato</string>
    <string name="addedDiscount">Sconto aggiunto con successo</string>
    <string name="easy">Facile</string>
    <string name="mediumDifficulty">Media difficoltà</string>
    <string name="difficult">Difficile</string>
    <string name="deletedDiscount">Sconto eliminato</string>
    <string name="denyLocalization">Negando la geolocalizzazione non potrai utilizzare a pieno questa app</string>
    <string name="permission">Permesso di geolocalizzazione</string>
    <string name="activediscount">Sconti Attivi</string>
    <string name="noactivediscount">Nessuno sconto attivato</string>
    <string name="completed">Completato</string>
    //SellerMapView
    <string name="allert_business_exist">Attività già esistente, inseriscine un\'altra.</string>
    //FragmentMapBackdrop
    <string name="discount_list">Lista sconti disponibili</string>
    <string name="no_discount_available">Nessuno sconto disponibile </string>
    <string name="expiringd">scadenza :</string>
    <string name="exp">Scaduto</string>
    //Statistics
    <string name="dailysteps">Passi giornalieri</string>
    <string name="dailykilocal">Kcal giornaliere</string>
    <string name="dailymeters">Metri giornalieri</string>

    <string name="chose_business">Seleziona Attività</string>
    <string name="add_discount">Aggiunta Sconto</string>
    <string name="discount_detail">Dettaglio Sconto</string>
    <string name="map">Mappa</string>
    <string name="statistics">Statistiche</string>
    <string name="queryHint">Nome attività, Città</string>


</resources>