<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/stepcounter"
        android:title="@string/action_stepcounter"
        android:onClick="OnItemSelected"
        android:icon="@android:drawable/ic_menu_upload_you_tube"
        android:orderInCategory="100"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        android:visible="false"
        android:onClick="OnItemSelected"
        android:title="@string/action_search" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:onClick="OnItemSelected"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:onClick="OnItemSelected"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>