<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText android:layout_height="46dp" android:layout_width="309dp" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" android:hint="@string/disocuntsQuantity"
        android:id="@+id/disocuntsQuantity"/>

    <EditText
        android:layout_height="44dp"
        android:layout_width="308dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/percentage"
        android:id="@+id/percentage"
        app:layout_constraintVertical_bias="0.605"/>

    <EditText android:layout_height="45dp"
        android:layout_width="312dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/description"
        android:id="@+id/description"
        app:layout_constraintVertical_bias="0.371"
        app:layout_constraintHorizontal_bias="0.484"/>

    <EditText android:layout_height="45dp"
        android:layout_width="312dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/expiringDate"
        android:id="@+id/expiringDate"
        app:layout_constraintVertical_bias="0.718"
        app:layout_constraintHorizontal_bias="0.525"/>

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/add"
        app:layout_constraintVertical_bias="0.843"
        app:layout_constraintHorizontal_bias="0.155"
        android:text="@string/add"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

</androidx.constraintlayout.widget.ConstraintLayout>