<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white_ice">


    <EditText
        android:id="@+id/description"
        android:layout_width="317dp"
        android:layout_height="54dp"
        android:background="@drawable/ic_text_box"
        android:drawableStart="@drawable/ic_description"
        android:drawablePadding="4dp"
        android:elevation="6dp"
        android:ems="10"
        android:hint="@string/description"
        android:paddingStart="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394" />

    <EditText
        android:layout_width="317dp"
        android:layout_height="54dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/disocuntsQuantity"
        android:drawablePadding="4dp"
        android:elevation="6dp"
        android:ems="10"
        android:paddingStart="6dp"
        android:background="@drawable/ic_text_box"
        android:drawableStart="@drawable/ic_walk"
        android:id="@+id/disocuntsQuantity"
        android:inputType="number"
        />

    <Button
        android:id="@+id/addDate"
        android:layout_width="62dp"
        android:layout_height="44dp"
        android:background="@color/verde_maggio"
        android:drawableStart="@drawable/ic_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <TextView
        android:id="@+id/expiringDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_text_box"
        android:elevation="6dp"
        android:hint="@string/expiringDate"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.785"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

    <Button
        android:id="@+id/add"
        android:background="@color/verde_maggio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.847" />


</androidx.constraintlayout.widget.ConstraintLayout>